--- a/main.css
+++ b/main.css
@@ -188,7 +188,9 @@ table {
 	margin-top: 0;
 }
 
+
 /* /////// 720 WEBSITE /////// */
+/*
 @media only screen and (min-width: 720px) {
 
 	.mouseNav{
@@ -227,9 +229,11 @@ table {
 }
 
 /* /////// 1080 WEBSITE /////// */
-@media only screen and (min-width: 1080px) {
 
+@media only screen and (min-width: 1080px) {
+	
 	/* /// Nav Div /// */
+	/*
 	.mouseNav{
 		display: initial;
 		background-color: #37489E;
@@ -257,8 +261,8 @@ table {
 	}
 
 	/* /// Intro Div /// */
+	/*
 	.mouseHole{
 		margin-top: 1.5em;
 	}
-
 }
